KIK-2594 upload Patients UI(fix font size  and spacing)

--- a/app/containers/UploadPatients/styles.less
+++ b/app/containers/UploadPatients/styles.less
@@ -11,12 +11,12 @@
 
     .label {
       width: 15%;
-      color: #101010;
+      color: #354052;
       margin: -1px 0;
       text-align: left;
-      font-size: 15px;
-      line-height: 22px;
-      padding: 0 5px 0 0;
+      font-size: 18px;
+      line-height: 21px;
+      padding: 0 10px 0 0;
       text-transform: uppercase;
     }
 
@@ -37,7 +37,7 @@
 
       .remove {
         float: left;
-        margin: 10px 10px 0 0;
+        margin: 10px 0 0 -2px;
 
         &:hover {
           cursor: pointer;
@@ -49,7 +49,7 @@
         padding-top: 15px;
 
         .remove {
-          margin: 30px 10px 0 0;
+          margin: 30px 0 0 -2px;
         }
       }
 
@@ -66,6 +66,10 @@
         margin-right: 1%;
         position: relative;
 
+        &.trash {
+          width: 1%;
+        }
+
         &.name {
           width: 22%;
         }
@@ -79,7 +83,7 @@
         }
 
         &.age {
-          width: 6%;
+          width: 8%;
         }
 
         &.gender {
@@ -88,6 +92,7 @@
 
         &.bmi {
           width: 10%;
+          margin-right: 0;
         }
       }
     }
@@ -130,7 +135,8 @@
       }
 
       &.bmis {
-        width: 10%;
+        width: 11%;
+        margin-right: 0;
       }
     }
 
@@ -144,8 +150,24 @@
 
   .text-right {
 
-    button:first-child {
-      margin-right: 10px;
+    button {
+      &.no-margin-right {
+        margin-right: 0;
+      }
+
+      &.margin-right {
+        margin-right: 10px;
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 1600px) {
+  .upload-patients-form {
+    .field-row.main {
+      .label {
+        font-size: 15px;
+      }
     }
   }
 }
